tests/ui/coroutine/layout-error.stderr
error[E0425]: cannot find value `Foo` in this scope
  --> $DIR/layout-error.rs:28:17
   |
LL |         let a = Foo;
   |                 ^^^ not found in this scope

error[E0391]: cycle detected when computing type of `F::{opaque#0}`
  --> $DIR/layout-error.rs:19:14
   |
LL | pub type F = impl Future;
   |              ^^^^^^^^^^^
   |
note: ...which requires computing type of opaque `F::{opaque#0}`...
  --> $DIR/layout-error.rs:19:14
   |
LL | pub type F = impl Future;
   |              ^^^^^^^^^^^
note: ...which requires borrow-checking `foo`...
  --> $DIR/layout-error.rs:23:1
   |
LL | / fn foo()
LL | | where
LL | |     F:,
   | |_______^
note: ...which requires promoting constants in MIR for `foo`...
  --> $DIR/layout-error.rs:23:1
   |
LL | / fn foo()
LL | | where
LL | |     F:,
   | |_______^
note: ...which requires checking if `foo` contains FFI-unwind calls...
  --> $DIR/layout-error.rs:23:1
   |
LL | / fn foo()
LL | | where
LL | |     F:,
   | |_______^
note: ...which requires building MIR for `foo`...
  --> $DIR/layout-error.rs:23:1
   |
LL | / fn foo()
LL | | where
LL | |     F:,
   | |_______^
   = note: ...which requires computing layout of `&Task<F>`...
   = note: ...which requires normalizing `&Task<F>`...
   = note: ...which again requires computing type of `F::{opaque#0}`, completing the cycle
   = note: cycle used when normalizing `Task<F>`
   = note: see https://rustc-dev-guide.rust-lang.org/overview.html#queries and https://rustc-dev-guide.rust-lang.org/query.html for more information

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0391, E0425.
For more information about an error, try `rustc --explain E0391`.
